--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=DatosAbiertos
 
 
-#spring.datasource.url=jdbc:mysql://mysql.csmtecnologiasas.com:3306/tesislinares
-#spring.datasource.username=linaresroot
-#spring.datasource.password=1datatesis
+spring.datasource.url=jdbc:mysql://mysql.csmtecnologiasas.com:3306/tesislinares
+spring.datasource.username=linaresroot
+spring.datasource.password=1datatesis
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
@@ -11,6 +11,6 @@ spring.jpa.show-sql=true
 
 
 server.port=8091
-spring.datasource.url=jdbc:mysql://localhost:3306/datos
-spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.url=jdbc:mysql://localhost:3306/datos
+#spring.datasource.username=root
+#spring.datasource.password=
